--- a/Owens Capstone Project/Capstone Project/style.css
+++ b/Owens Capstone Project/Capstone Project/style.css
@@ -370,6 +370,7 @@ div.desc {
 input.responsive
 {
   width: 100%;
+  height: auto;
 }
 @media only screen and (max-width: 700px) {
   .responsive {
@@ -393,4 +394,9 @@ input[type="image"]
   content: "";
   display: table;
   clear: both;
+}
+
+div.cart{
+	float:right;
+	
 }
